# agentops-platform

./: .dockerignore  .env.example  .gitignore  NEXT_WINDOW_MEMORY.md  README.md  docker-compose.yml
apps/worker-windows/: README.md  agentops-worker-uia.spec  agentops-worker.spec  pyproject.toml
apps/worker-windows/scripts/: build_worker.ps1  install_worker.ps1  install_worker_autostart.ps1  install_worker_service.ps1  start_worker.ps1  start_worker_visible.ps1  status_worker.ps1  stop_worker.ps1  uninstall_worker_autostart.ps1  uninstall_worker_service.ps1
apps/worker-windows/tests/: test_command_runner.py  test_path_guard.py  test_project_detection.py  test_prompt_input.py  test_registration.py  test_screenshot.py  test_session_probe.py  test_trae_intervention.py  test_trae_supervisor.py  test_trae_watcher.py  test_windows_service.py  test_worker_main.py  test_worker_supervisor.py
apps/worker-windows/worker/: __init__.py  capabilities.py  config.py  main.py  registration.py
apps/worker-windows/worker/connection/: client.py  outbox.py  uploader.py
apps/worker-windows/worker/project/: browser_acceptance.py  commands.py  dev_env.py  diagnostics.py  git_submit.py  product_review.py  scanner.py  workspace.py
apps/worker-windows/worker/runtime/: cancellation.py  command_runner.py  state.py  stop_cleanup.py  supervisor.py  windows_service.py
apps/worker-windows/worker/safety/: command_guard.py  path_guard.py
apps/worker-windows/worker/system/: clipboard.py  console.py
apps/worker-windows/worker/trae/: diagnose.py  intervene.py  local_trace.py  prompt.py  (+9 more)
(+136 files in other folders)
