[project]
name = "agentops-worker-windows"
version = "0.1.0"
description = "Windows worker for AgentOps Trae CN automation"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pillow>=10.4.0",
  "mss>=9.0.0",
  "comtypes>=1.4.8; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]
package = [
  "pyinstaller>=6.10.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["worker*"]
